codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__skill_popup_targets_unbound_mention_left_of_bound_mention.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"▌ $unbound-skill  $bound-skill continue                                                             "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  unbound-skill  [Skill] Example skill used in tests.                                               "
"                                                                                                    "
"  Press enter to insert or esc to close                                                             "
